on going work towards release. adding gc options